--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
+apimatic-core==0.2.19
+apimatic-core-interfaces==0.1.6
+apimatic-requests-client-adapter==0.1.7
+CacheControl==0.12.14
 certifi==2025.1.31
 charset-normalizer==3.4.1
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
+deprecation==2.1.0
 fonttools==4.56.0
 idna==3.10
+jsonpickle==3.3.0
+jsonpointer==2.4
 kiwisolver==1.4.8
 matplotlib==3.10.1
+msgpack==1.1.0
 numpy==2.2.3
 packaging==24.2
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+qrcode==8.0
 reportlab==4.0.4
 requests==2.31.0
+setuptools==76.0.0
 six==1.17.0
+square==0.0.3
+squareup==40.1.0.220250220
 ttkbootstrap==1.10.1
 urllib3==2.3.0
